$Id$

v0.39.9		29-Jan-2004

	mbcico:
		Added experimental code for telnet outbound connections. This
		code is not compiled by default so don't worry or bother.


v0.39.8		26-Jan-2004 - 29-Jan-2004

	warning:
		Avoid this version, binkp compression is buggy.

	libcommon.a:
		Fixed compiler directive for Linux in execute function.
		Code cleanup.

	mbcico:
		Fixed binkp file resync.
		Binkp now only tries to compress data frames.
		Fixed binkp master timer reset points, this should make session
		timeout work.
		Code cleanup.
		The filelist function didn't add files from fileboxes.
		Added refresh heartbeat in binkp driver to prevent broken
		sessions after 10 minutes.
		Added more logging to investigate the tty hangup problem
		Fixed zlib (un)compress buffersize init.


v0.39.7		14-Jan-2004 - 26-Jan-2004

	remark:
		Calling points is available now, but I know in the past that I
		changed it to allways call the boss. That was from the time 
		that mbtask didn't exist. It is possible that something is
		broken now, please report such situations.

	general:
		In all sources replaced the usleep function with the msleep
		function. The usleep function will become obsolete someday.

	libcommon.a:
		In execute and execsh on Linux systems sync() is called before
		and after running the external program to make sure diskbuffers
		are committed.
		Added a milliseconds timer.
		Before and after execute and execsh a 200 ms pause is inserted
		to prevent (un)archiver and other errors.

	mbcico:
		Removed the check to disable calling points. 
		Added a check to see if we get a URL to call other systems.
		If nodelist info fails, increase error counter in steps of 10.
		Merged tmail patches from Przemyslaw Kwiatkowski.
		Fixed nodelocks during session handshake after many years. The
		problem showed only when mbcico was used together with a mailer
		on a different OS. When a aka is busy, the aka is now dropped.
		When all akas are busy, a session is impossible and the session