@@ -36,7 +36,6 @@
   <li><A HREF="mbseq.html">mbseq, Sequence number creator</A>
   <li><A HREF="mbsetup.html">mbsetup, The setup program</A>
   <li><A HREF="mbstat.html">mbstat, The bbs status change program</A>
-  <li><A HREF="mbtelind.html">mbtelind, The telnet input proxy daemon</A>
   <li><A HREF="mbtoberep.html">mbtoberep, The toberep.data lister</A>
   <li><A HREF="mbuser.html">mbuser, The userbase maintenance program</A>
   <li><A HREF="mbuseradd.html">mbuseradd, The adduser wrapper</A>
