@@ -1,69 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<HTML>
-<!-- $Id$ -->
-<HEAD>
-<META http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<META http-equiv="Content-Style-Type" content="text/css">
-<META NAME="Language" content='en'>
-<META name="author" lang="en" content="Michiel Broek">
-<META name="copyright" lang="en" content="Copyright Michiel Broek">
-<META name="description" lang="en" content="MBSE BBS Manual">
-<META name="keywords" lang="en" content="MBSE BBS, MBSE, BBS, manual, fido, fidonet, gateway, tosser, mail, tic, mailer">
-<TITLE>MBSE BBS Programs - mbtelind - Incoming telnet proxy.</TITLE>
-<LINK rel=stylesheet HREF="../manual.css">
-</HEAD>
-<BODY>
-<BLOCKQUOTE>
-<div align="right"><h5>Last update 26-Nov-2003</h5></div>
-<div align="center"><H1>mbtelind - Incoming telnet proxy</H1></div>
-
-<H3>Synopsis.</H3>
-<P>
-<code><strong>mbtelind</strong></code>
-<P>&nbsp;<P>
-
-<H3>Description.</H3>
-<P>
-<strong>mbtelind</strong> is a small proxy that handles incoming telnet/sio
-sessions and calls mbcico via the network on the standard fido port (60179).
-This small proxy was original written by Vadim Zaliva, lord@crocodile.kiev.ua, Serge
-Terekhov, 2:5000/13@fidonet and Vadim Kurland, vadim@gu.kiev.ua for the ifmail
-package as iftelnetd. This program should be installed to listen to port 60177
-and if you do not allow telnet users login also on port 23.
-<P>
-<P>&nbsp;<P>
-
-<H3>Installation</H3>
-<P>
-To accept incoming telnet sessions to allow the ITN nodelist flag you must
-install <b>mbtelind</b> in your system. You need to do this as root. The
-example shown is for most GNU/Linux distributions.
-Add the following line to <code>/etc/services</code>:
-<pre>
-tfido           60177/tcp
-</pre>
-Add the following line to <code>/etc/inetd.conf</code>:
-<pre>
-tfido   stream  tcp     nowait  mbse    /opt/mbse/bin/mbtelind mbtelind
-</pre>
-Or add the following lines to <code>/etc/xinetd.d/mbsebbs</code> if your system
-uses xinetd instead of inetd:
-<pre>
-service tfido
-{
-	socket_type     = stream
-	protocol        = tcp
-	wait            = no
-	user            = mbse
-	instances       = 10
-	server          = /opt/mbse/bin/mbtelind
-}
-</pre>
-<p>
-
-
-<A HREF="index.htm"><IMG SRC="../images/larrow.png" ALT="Index" Border="0">Back to index</A>&nbsp;
-<A HREF="../index.htm"><IMG SRC="../images/b_arrow.png" ALT="Main" Border="0">Back to Main index</A>
-</BLOCKQUOTE>
-</BODY>
-</HTML>
